Fixing performance issues and designing text hand off.